jellyfin_stack/jellyseerr/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyfin
  labels:
    app: jellyseerr
spec:
  type: ClusterIP
  selector:
    app: jellyseerr
  ports:
  - name: jellyseerr-http
    protocol: TCP
    port: 80
    targetPort: 5055
